Update AutoValueProcessor to use Java 8 constructs now that we can.
-------------
Created by MOE: https://github.com/google/moe
MOE_MIGRATED_REVID=153774612